Fixed bug #42086 (SoapServer return Procedure '' not present for WSIBasic compliant wsdl)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@241995 c90b9560-bf6c-de11-be94-00142212c4b1